made small refinements to site ux

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <nav>
             <ul>
-                <li>
+                <li class="scroll">
                     <a href="#home">Home</a>
                 </li>
                 <li class="smoothWork">
@@ -88,8 +88,8 @@
         </div>
         <nav>
             <ul>
-                <li>
-                    <a href="home">Home</a>
+                <li class="scroll">
+                    <a href="#home">Home</a>
                 </li>
                 <li class="smoothWork">
                     <a href="#work">Explore</a>
@@ -428,11 +428,11 @@
                         </a>
                     </li>
                     <li>
-                            <a href="https://github.com/misterjtc" aria-label="Go to Cook Consultings Github page" class="github">
-                                <i aria-hidden class="fab fa-github social1"></i>
-                                <i aria-hidden class="fab fa-github social2"></i>
-                            </a>
-                        </li>
+                        <a href="https://github.com/misterjtc" aria-label="Go to Cook Consultings Github page" class="github">
+                            <i aria-hidden class="fab fa-github social1"></i>
+                            <i aria-hidden class="fab fa-github social2"></i>
+                        </a>
+                    </li>
                     <li>
                         <a href="door.html" aria-label="Go to Cook Consultings Facebook page" class="facebook">
                             <i aria-hidden class="fab fa-facebook-f social1"></i>
