refining code, update verbage and adjust responsive design

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         What we do
                     </h2>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate assumenda eius architecto ea? Alias, voluptate?
+                        Cook Consulting solves our clients' toughest challenges by providing unmatched services in design, consulting, digital, technology and operations. With expertise in a number of industries, we deliver outcomes for a demanding digital world.
                     </p>
                 </div>
                 <div class="workItems">
@@ -187,40 +187,66 @@
                 </h2>
                 <div class="aboutItem">
                     <div class="aboutIcon">
+                        <i class="fal fa-handshake"></i>
+                    </div>
+                    <div class="aboutText">
+                        <h3>
+                            Commitment
+                        </h3>
+                        <p>
+                            We are commited to delivery, to innovation and to achieving the very best in everything we do.
+                        </p>
+                    </div>
+                </div>
+                <div class="aboutItem">
+                    <div class="aboutIcon">
+                        <i class="fal fa-trophy-alt"></i>
+                    </div>
+                    <div class="aboutText">
+                        <h3>
+                            Leadership
+                        </h3>
+                        <p>
+                            We push the boundaries and challenge convention, stratically and technologically.
+                        </p>
+                    </div>
+                </div>
+                <div class="aboutItem">
+                    <div class="aboutIcon">
                         <i class="fal fa-books"></i>
                     </div>
                     <div class="aboutText">
                         <h3>
-                            All over the world
+                            Expertise
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro tempora veniam culpa.
+                            Our people have vision, insight, know-how and creativity, and these are reflected in our processes and harnessed through research and development.
                         </p>
                     </div>
                 </div>
                 <div class="aboutItem">
                     <div class="aboutIcon">
-                        <i class="fal fa-cogs"></i>
+                        <i class="fal fa-fighter-jet"></i>
                     </div>
                     <div class="aboutText">
                         <h3>
-                            All the design
+                            Agility
                         </h3>
                         <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa beatae praesentium at?
+                            We are responsive in our technical and commercial approach to suit the needs of our customers.
                         </p>
                     </div>
                 </div>
                 <div class="aboutItem">
                     <div class="aboutIcon">
-                        <i class="fal fa-user-hard-hat"></i>
+                        <i class="fal fa-user-shield"></i>
                     </div>
                     <div class="aboutText">
                         <h3>
-                            High quality everything
+                            Responsibility
                         </h3>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit ullam in ratione?
+                            We take accountability for delivering high quality projects on time and to budget.
                         </p>
                     </div>
                 </div>
