continued refining responsive design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
    <title>Cook Consulting</title>
-   <link rel="shortcut icon" type="image/x-icon" href="./icons/arrow-left-light.svg"/>
+   <link rel="shortcut icon" type="image/x-icon" href="./assets/favicon.ico"/>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-Bx4pytHkyTDy3aJKjGkGoHPt3tvv6zlwwjc3iqN7ktaiEMLDPqLSZYts2OjKcBx1" crossorigin="anonymous">
@@ -405,8 +405,8 @@
                             <li class="smoothWork"><a href="#work">Our Work</a></li>
                             <li class="smoothAbout"><a href="#about">About Us</a></li>
                             <li class="smoothProject"><a href="#projects">Projects</a></li>
-                            <li><a href="">This and That</a></li>
-                            <li><a href="">I Dunno</a></li>
+                            <li><a href="door.html">This and That</a></li>
+                            <li><a href="door.html">I Dunno</a></li>
                         </ul>
                     </div>
                 </div>
@@ -416,11 +416,11 @@
                             Projects
                         </h3>
                         <ul>
-                            <li><a href="">Design</a></li>
-                            <li><a href="">3D Printing</a></li>
-                            <li><a href="">Rendering</a></li>
-                            <li><a href="">FEA</a></li>
-                            <li><a href="">Drones</a></li>
+                            <li><a href="#projects" class="projSort design">Design</a></li>
+                            <li><a href="#projects" class="projSort printing">3D Printing</a></li>
+                            <li><a href="#projects" class="projSort rendering">Rendering</a></li>
+                            <li><a href="#projects" class="projSort fea">FEA</a></li>
+                            <li><a href="#projects" class="projSort drone">Drones</a></li>
                         </ul>
                     </div>
                 </div>
@@ -460,7 +460,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="door.html" aria-label="Go to Cook Consultings Facebook page" class="facebook">
+                        <a href="https://facebook.com" aria-label="Go to Cook Consultings Facebook page" class="facebook">
                             <i aria-hidden class="fab fa-facebook-f social1"></i>
                             <i aria-hidden class="fab fa-facebook-f social2"></i>
                         </a>
