added missing alt tags to a number of photos

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             </div>
             <div class="portfolio">
                 <figure class="portfolioItem designItem">
-                    <img src="./assets/markus-spiske-1388597-unsplash.jpg" alt="">
+                    <img src="./assets/markus-spiske-1388597-unsplash.jpg" alt="A picture of a Leica camera">
                     <figcaption>
                         <h3>
                             Design
@@ -296,7 +296,7 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem designItem">
-                    <img src="./assets/ryan-tauss-795-unsplash.jpg" alt="">
+                    <img src="./assets/ryan-tauss-795-unsplash.jpg" alt="An old combustion engine sits ina dark appearingly abandoned room">
                     <figcaption>
                         <h3>
                             Design
@@ -307,7 +307,7 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem printItem">
-                    <img src="./assets/neonbrand-560705-unsplash.jpg" alt="">
+                    <img src="./assets/neonbrand-560705-unsplash.jpg" alt="A 3D printed human skull">
                     <figcaption>
                         <h3>
                             3D Printing
@@ -318,8 +318,8 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem portHero renderItem">
-                    <img src="./assets/daniel-cheung-554579-unsplash.jpg" alt="" class="portCell portCell1">
-                    <img src="./assets/daniel-cheung-554585-unsplash.jpg" alt="" class="portCell portCell2">
+                    <img src="./assets/daniel-cheung-554579-unsplash.jpg" alt="A pair of lego stormtroopers stand together looking off into the distance" class="portCell portCell1">
+                    <img src="./assets/daniel-cheung-554585-unsplash.jpg" alt="Real stormtroppers hangout with some lego star wars characters" class="portCell portCell2">
                     <figcaption>
                         <h3>
                             Rendering
@@ -330,8 +330,8 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem portHero renderItem">
-                    <img src="./assets/dominik-scythe-414905-unsplash.jpg" alt="" class="portCell portCell1">
-                    <img src="./assets/frank-wang-1092733-unsplash.jpg" alt="" class="portCell portCell2">
+                    <img src="./assets/dominik-scythe-414905-unsplash.jpg" alt="A miniature Wall-E looks off into a magestic sunset" class="portCell portCell1">
+                    <img src="./assets/frank-wang-1092733-unsplash.jpg" alt="An army of small custom robots" class="portCell portCell2">
                     <figcaption>
                         <h3>
                             Rendering
@@ -342,7 +342,7 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem feaItem">
-                    <img src="./assets/markus-spiske-1221285-unsplash.jpg" alt="">
+                    <img src="./assets/markus-spiske-1221285-unsplash.jpg" alt="A photo of a high performance engine">
                     <figcaption>
                         <h3>
                             Simulation
@@ -353,7 +353,7 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem droneItem">
-                    <img src="./assets/alexis-antoine-1420382-unsplash.jpg" alt="">
+                    <img src="./assets/alexis-antoine-1420382-unsplash.jpg" alt="A top down view from a drone of a winding road in the middle of a dense forest">
                     <figcaption>
                         <h3>
                             Drone Photography
@@ -364,7 +364,7 @@
                     </figcaption>
                 </figure>
                 <figure class="portfolioItem droneItem">
-                    <img src="./assets/jack-hamilton-322038-unsplash.jpg" alt="">
+                    <img src="./assets/jack-hamilton-322038-unsplash.jpg" alt="A top down view from a drone of a single person canoeing on a quiet lake">
                     <figcaption>
                         <h3>
                             Drone Photography
@@ -393,7 +393,7 @@
     <div class="wrapper">
         <div class="footer">
             <div class="logo">
-                <a href="#home"><img src="./assets/cook_consulting_new_black_vectorized.png" alt=""></a>
+                <a href="#home"><img src="./assets/cook_consulting_new_black_vectorized.png" alt="The Cook Consulting Logo"></a>
             </div>
             <div class="mainLinks">
                 <div class=" mainLinkItem mainLink1">
