--- a/index.html
+++ b/index.html
@@ -501,6 +501,6 @@ Designed and developed by:
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.2.0/jquery.smooth-scroll.min.js" ></script>
     <script src="https://kit.fontawesome.com/c7fe253caa.js"></script>
-    <script src="/scripts/main.js"></script>
+    <script src="./scripts/main.js" type="text/javascript"></script>
 </body>
 </html>
